--- a/view/main.ejs
+++ b/view/main.ejs
@@ -98,11 +98,23 @@ text-decoration: none;
       background:#dfe3e8;
     }
     .btnprimary{
-      background:var(--primary);
-      color:#fff;
-      box-shadow: 0 6px 14px rgba(0,0,0,0);
+    background:#fff;  
+    color:#3b82f6;    
+    border:2px solid #3b82f6; 
+    
+    box-shadow:0 10px 24px rgba(10,102,255,.08);;
+    padding:6px 10px;
+    border-radius:6px;
+    font-size:14px;
+    font-weight:500;
+    text-decoration:none;
     }
-    .btnprimary:hover{ background:var(--primary-dark); box-shadow: 10px 10px;}
+    .btnprimary:hover{ 
+     background:#3b82f6;               /* 白底 */
+    color:#fff;            /* 蓝字 */
+     /* 有边框更像“线性按钮” */               
+    box-shadow:0 16px 32px rgba(10,102,255,.35);
+    transform:translateY(-1px);}
 
     /* 右上角圆形按钮 */
     .floating-profile-btn {
@@ -399,7 +411,7 @@ white-space: pre-wrap;
        </div>
 
        <div style="margin-top:8px; display:flex; justify-content:flex-end; gap:8px;">
-         <a class="btn btn-primary" href="/searchFood">Go to add</a>
+         <a class="btn btnprimary" href="/searchFood">Go to add</a>
        </div>
      </div>
 
